fix other instances of sync refresh, fix ordering in tablist (#4720)
Co-authored-by: Timothy Southwick <NickNackGus@gmail.com>